<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">PXL App</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="button_lesroosters" translatable="false">Lesroosters</string>
    <string name="button_info" translatable="false">Info</string>
    <string name="button_bekijk" translatable="false">Bekijk</string>
    <string name="title_activity_lesroosters" translatable="false">Lesrooster zoeken</string>
    <string name="title_activity_info" translatable="false">Info</string>
    <string name="geef_klas_message" translatable="false">Geef klas</string>
    <string name="filter" translatable="false">Filter</string>
    <string name="title_activity_weekmenu" translatable="false">PXL Weekmenu</string>
    <string name="button_weekmenu" translatable="false">Weekmenu</string>
    <string name="button_menuElfde" translatable="false">Campus Elfde Linie</string>
    <string name="button_menuDiep" translatable="false">Campus Diepenbeek</string>
    <string name="button_menuVild" translatable="false">Campus Vildersstraat</string>
    <string name="pxl_logo" translatable="false">Pxl logo</string>
    <string name="title_activity_lesrooster_view" translatable="false">Lesrooster</string>
    <string name="title_activity_lesrooster_view_row" translatable="false">Lesrooster rij</string>
    <string name="vernieuwen" translatable="false">Vernieuwen</string>
    <string name="klaslijst_vernieuwen" translatable="false">Klaslijst vernieuwen</string>
    <string name="standaard_instellen" translatable="false">Instellen als standaard?</string>
    <string name="andere_klas" translatable="false">Andere klas</string>

    <string-array name="weekdagen" translatable="false">
        <item>Maandag</item>
        <item>Dinsdag</item>
        <item>Woensdag</item>
        <item>Donderdag</item>
        <item>Vrijdag</item>
    </string-array>

    <string name="title_activity_weekmenu_view" translatable="false">WeekmenuView</string>
    <string name="title_activity_weekmenu_view_row" translatable="false">WeekmenuViewRow</string>
    <string name="title_activity_kalender" translatable="false">Academische kalender</string>
    <string name="button_klassenBusiness" translatable="false">Business</string>
    <string name="button_klassenEducation" translatable="false">Education</string>
    <string name="button_klassenHealthcare" translatable="false">Healthcare</string>
    <string name="button_klassenIT" translatable="false">IT</string>
    <string name="button_klassenTech" translatable="false">Tech</string>
    <string name="title_activity_departement" translatable="false">Departement kiezen</string>
    <string name="button_kalender" translatable="false">Academische kalender</string>
    <string-array name="lessoort" translatable="false">
        <item>Sem</item>
        <item>9 weken</item>
        <item>9 weken SP</item>
        <item>6 weken</item>
    </string-array>
</resources>
