<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/mainLayout"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal" >
        
        <Button
	        android:id="@+id/button_lesroosters"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="2"
	        android:text="@string/button_lesroosters"  
	        android:onClick="openLesroosters" />
        
		<Button
		    android:id="@+id/button_info"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:onClick="openInfo"
		    android:text="@string/button_info" />  
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal" >
        
        <Button
        android:id="@+id/button_weekmenu"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:text="@string/button_weekmenu"  
        android:onClick="openWeekmenu" />
        
         
    </LinearLayout>

</LinearLayout>
