<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeekmenuActivity" 
    android:id="@+id/weekMenuLayout">
	
    <LinearLayout
        android:id="@+id/eersteRijEten"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:background="@drawable/textview_selector" 
        android:onClick="geefMenu"
         >

        <ImageView
            android:id="@+id/imageViewEten1"
            android:layout_width="60dp"
          	android:scaleType="centerInside"
            android:layout_height="match_parent"
            android:src="@drawable/restaurant" />

        <TextView
            android:id="@+id/textViewEten1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="fill_vertical"
            android:textSize="20sp"
            android:text="@string/button_menuElfde" />

    </LinearLayout>
   <View
	    android:id="@+id/eerstelijnEten"
	    android:layout_width="fill_parent"
	    android:layout_height="1dip"
	    android:background="@color/green_accent"
	    android:layout_below="@+id/eersteRijEten"
	/>
   <LinearLayout
        android:id="@+id/tweedeRijEten"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:background="@drawable/textview_selector" 
        android:onClick="geefMenu" 
        android:layout_below="@+id/eerstelijnEten">

        <ImageView
            android:id="@+id/imageViewEten2"
            android:layout_width="60dp"
          	android:scaleType="centerInside"
            android:layout_height="match_parent"
            android:src="@drawable/restaurant" />

        <TextView
            android:id="@+id/textViewEten2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="fill_vertical"
            android:textSize="20sp"
            android:text="@string/button_menuDiep" />

    </LinearLayout>	
	<View
	    android:id="@+id/tweedelijnEten"
	    android:layout_width="fill_parent"
	    android:layout_height="1dip"
	    android:background="@color/green_accent"
	    android:layout_below="@+id/tweedeRijEten"
	/>	
    <LinearLayout
        android:id="@+id/derdeRijEten"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:onClick="geefMenu" 
        android:background="@drawable/textview_selector" 
        android:layout_below="@+id/tweedelijnEten" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="60dp"
            android:scaleType="centerInside"
            android:layout_height="match_parent"
            android:src="@drawable/restaurant" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="fill_vertical"
            android:textSize="20sp"
            android:text="@string/button_menuVild" />
        
    </LinearLayout>
	<View
	    android:id="@+id/derdelijnEten"
	    android:layout_width="fill_parent"
	    android:layout_height="1dip"
	    android:background="@color/green_accent"
	    android:layout_below="@+id/derdeRij"
	/>
</RelativeLayout>
